add register ans controllers

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ ACCESS_TOKEN_SECRET=abishek-1stproject
 ACCESS_TOKEN_EXPERY=1d
 REFRESH_TOKEN_SECRET=abishek28
 REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=deafio6ff
+CLOUDINARY_API_KEY=444712786488542
+CLUODINARY_API_SECRET=jC_McCEujamT6J9iAN2cOivPimo
