--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 PORT=4000
-MONGODB_URL=mongodb+srv://pramanikabhi28:pramanik123@cluster0.vggiqa9.mongodb.net/youtube_backend?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://pramanikabhi28:pramanik123@cluster0.vggiqa9.mongodb.net/
+DB_NAME=youtube_backend?
 
 CROS_ORIGIN=*
 ACCESS_TOKEN_SECRET=abishek-1stproject
-ACCESS_TOKEN_EXPERY=1d
+ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=abishek28
 REFRESH_TOKEN_EXPIRY=10d
 
